Bug 678002 / bug 678184 - Don't call +[NSGraphicsContext setCurrentContext:] when drawing window contents into the titlebar because it's unnecessary and results in erratic behavior for unknown reasons. r=josh